--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div id="logo">
             <div class="logo-flex">
                 <span class="image avatar48 avatar-left">
-                    <img src="images/headshot.jpg" alt="Ahmed Abdulrahman headshot" />
+                    <img src="images/headshot.png" alt="Ahmed Abdulrahman headshot" />
                 </span>
 
                 <div class="logo-text">
@@ -307,3 +307,4 @@
 
 </body>
 </html>
+
