--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <style>
         :root {
-            --sidebar-bg: #F2F4F7;
-            --sidebar-text: #1F2937;
-            --sidebar-muted: #6B7280;
+            --sidebar-bg: #0B1F3A;
+            --sidebar-text: #E5EDFF;
+            --sidebar-muted: #9FB2D9;
 
             --main-bg: #0E2342;
             --accent: #2F6BFF;
@@ -34,21 +34,21 @@
         }
 
         /* =====================
-           SIDEBAR
+           SIDEBAR STRUCTURE
         ===================== */
 
         #header {
-            width: 300px;
+            width: 320px;
             background: var(--sidebar-bg);
-            border-right: 1px solid #E5E7EB;
+            border-right: 1px solid rgba(255,255,255,0.06);
         }
 
         #main {
-            margin-left: 300px;
+            margin-left: 320px;
             background: var(--main-bg);
         }
 
-        /* Remove HTML5 UP image chrome */
+        /* Remove HTML5 UP chrome */
         #logo .image {
             background: none !important;
             border: none !important;
@@ -56,66 +56,70 @@
             padding: 0 !important;
         }
 
-        /* Logo block */
+        /* =====================
+           IDENTITY BLOCK
+        ===================== */
+
         #logo {
-            padding: 1.8em 1.2em 1.4em 1.2em;
-            text-align: center;
+            padding: 2.2em 1.6em 1.6em 1.6em;
         }
 
-        .logo-flex {
+        .identity {
             display: flex;
-            flex-direction: column;
             align-items: center;
+            gap: 18px;
         }
 
-        /* Headshot */
-        .avatar-left img {
-            width: 96px;
-            height: 96px;
+        .identity img {
+            width: 110px;
+            height: 110px;
             border-radius: 50%;
             object-fit: cover;
-            display: block;
-            margin-bottom: 0.75em;
+            flex-shrink: 0;
         }
 
-        /* Name */
-        .logo-text h1 {
+        .identity-text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .identity-text h1 {
             margin: 0;
-            font-size: 1.15rem;
-            line-height: 1.25;
+            font-size: 1.25rem;
+            line-height: 1.15;
             color: var(--sidebar-text);
-            text-align: center;
         }
 
-        /* Subtitle */
-        .logo-text p {
-            margin-top: 0.35em;
-            font-size: 0.75rem;
+        .identity-text p {
+            margin-top: 0.4em;
+            font-size: 0.78rem;
             line-height: 1.4;
             color: var(--sidebar-muted);
-            text-align: center;
         }
 
         /* =====================
-           NAV
+           NAVIGATION
         ===================== */
 
         #nav {
-            margin-top: 2em;
+            margin-top: 2.5em;
         }
 
         #nav ul {
-            text-align: center;
+            padding-left: 0;
         }
 
         #nav ul li {
-            margin: 0.7em 0;
+            margin: 1.1em 0;
         }
 
         #nav ul li a {
             font-size: 0.95rem;
             color: var(--sidebar-text);
-            display: inline-block;
+            text-align: left;
+            padding-left: 1.6em;
+            display: block;
         }
 
         /* =====================
@@ -123,37 +127,38 @@
         ===================== */
 
         #top {
-            background: var(--main-bg);
+            background: linear-gradient(135deg, #0E2342 0%, #09182F 100%);
             color: var(--text-light);
-            padding: 3em 0 2.4em 0 !important;
+            padding: 4em 0 3.2em 0 !important;
+            text-align: center;
         }
 
         .hero-name {
-            font-size: 3rem;
-            margin-bottom: 0.25em;
+            font-size: 3.1rem;
+            margin-bottom: 0.35em;
         }
 
         .hero-subtitle {
-            font-size: 1rem;
+            font-size: 1.05rem;
             color: #dbe4ff;
-            margin-bottom: 0.15em;
+            margin-bottom: 0.25em;
         }
 
         .hero-credentials {
-            font-size: 0.85rem;
+            font-size: 0.9rem;
             color: #b9c7e6;
         }
 
         #top .button {
             background: var(--accent);
             border: none;
-            font-size: 0.85rem;
-            padding: 0.6em 1.4em;
-            margin-top: 1.1em;
+            font-size: 0.9rem;
+            padding: 0.75em 1.8em;
+            margin-top: 1.6em;
         }
 
         /* =====================
-           SECTIONS
+           CONTENT SECTIONS
         ===================== */
 
         #about, #portfolio, #skills, #contact {
@@ -163,9 +168,10 @@
 
         .about-tight p {
             max-width: 760px;
-            margin: 0 auto 1.2em auto;
+            margin: 0 auto 1.4em auto;
             line-height: 1.65;
             font-size: 0.95rem;
+            text-align: center;
         }
 
         /* =====================
@@ -174,19 +180,19 @@
 
         #portfolio .item {
             background: white;
-            border-radius: 12px;
-            padding-bottom: 6px;
-            box-shadow: 0px 4px 12px rgba(0,0,0,0.07);
+            border-radius: 14px;
+            padding-bottom: 8px;
+            box-shadow: 0px 6px 18px rgba(0,0,0,0.08);
             transition: transform 0.2s ease;
         }
 
         #portfolio .item:hover {
-            transform: translateY(-5px);
+            transform: translateY(-6px);
         }
 
         #portfolio .item header h3 {
-            font-size: 0.95rem;
-            margin: 0.6em 0 0.4em 0;
+            font-size: 1rem;
+            margin: 0.8em 0 0.6em 0;
         }
     </style>
 </head>
@@ -197,14 +203,12 @@
 <div id="header">
     <div class="top">
 
-        <!-- Logo -->
+        <!-- Identity -->
         <div id="logo">
-            <div class="logo-flex">
-                <span class="image avatar48 avatar-left">
-                    <img src="images/headshot.png" alt="Ahmed Abdulrahman headshot" />
-                </span>
+            <div class="identity">
+                <img src="images/headshot.png" alt="Ahmed Abdulrahman headshot" />
 
-                <div class="logo-text">
+                <div class="identity-text">
                     <h1>Ahmed Abdulrahman</h1>
                     <p>Finance • Data Analytics • CFA Level I</p>
                 </div>
@@ -286,7 +290,7 @@
 <section id="skills">
     <div class="container">
         <header><h2>Skills</h2></header>
-        <p>
+        <p style="text-align:center;">
             <strong>Finance:</strong> DCF, LBO, M&A, Portfolio Analytics<br>
             <strong>Programming:</strong> Python, SQL, Power BI, Tableau
         </p>
@@ -296,7 +300,7 @@
 <section id="contact">
     <div class="container">
         <header><h2>Contact</h2></header>
-        <p>Open to full-time opportunities and professional discussions.</p>
+        <p style="text-align:center;">Open to full-time opportunities and professional discussions.</p>
     </div>
 </section>
 
@@ -307,4 +311,3 @@
 
 </body>
 </html>
-
