--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- Identity -->
         <div id="logo">
             <div class="identity">
-                <img src="images/headshot.jpg" alt="Ahmed Abdulrahman headshot">
+                <img src="images/headshot.png" alt="Ahmed Abdulrahman headshot">
                 <h1>Ahmed Abdulrahman</h1>
                 <p>Finance • Data Analytics • CFA Level I</p>
             </div>
@@ -232,3 +232,4 @@
         </p>
     </div>
 </
+
